--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 # dependencies
-*/node_modules/
+*/node_modules
 */.pnp
 .pnp.js
 
@@ -20,3 +20,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# please work
+tutorial-notes/part1/node_modules/
+/part1/*/node_modules
