--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 */build
 
 # misc
-.DS_Store
+*.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -24,3 +24,4 @@ yarn-error.log*
 # please work
 tutorial-notes/part1/node_modules/
 /part1/*/node_modules
+/part2/*/node_modules
